# agentcore-basic-arch-sample

./: README.md
gateway/: external_api_lambda.py  lambda_tools_schema.json  setup_gateway.ipynb
runtime/: Dockerfile  bedrock-agentcore-policy.json  main.py  pyproject.toml
