[project]
name = "agentcore-basic-arch-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.2",
    "bedrock-agentcore-starter-toolkit>=0.1.6",
    "boto3>=1.40.11",
    "jupyter>=1.1.1",
    "pip>=25.2",
    "riff>=0.0.287.0",
    "ruff>=0.0.287",
    "strands-agents>=1.4.0",
]
